Updated in database queries.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=inventoryDemo
-#management.server.port=5539
 management.endpoints.web.exposure.include=prometheus
 
+#For Postgres database
 spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
 spring.datasource.username=your_username
 spring.datasource.password=your_password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+
+#for Embedded H2 Database
+#spring.h2.console.enabled = true
+#spring.datasource.platform = h2
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=none
 
