--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<version>1.6.9</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.h2database</groupId>-->
+<!--			<artifactId>h2</artifactId>-->
+<!--			<scope>runtime</scope>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
@@ -80,5 +86,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
